--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 
 	<properties>
 		<jdk.version>1.6</jdk.version>
+        <slf4j.version>1.6.2</slf4j.version>
+        <nrjavaserial.version>3.7.5.1</nrjavaserial.version>
 		<junit.version>4.10</junit.version>
 	</properties>
 
@@ -16,8 +18,18 @@
 		<dependency>
 			<groupId>com.neuronrobotics</groupId>
 			<artifactId>nrjavaserial</artifactId>
-			<version>3.7.5.1</version>
+			<version>${nrjavaserial.version}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+			<version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
